fixed desktop styles without a proper media, and also fixed a overflow when the size of the windows is under 375px

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,43 +1,3 @@
-@font-face {
-    font-family: 'Manrope';
-    src: url('../fonts/static/Manrope-ExtraBold.ttf');
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: 'Manrope';
-    src: url('../fonts/static/Manrope-SemiBold.ttf');
-    font-weight: 600;
-}
-
-@supports(font-variation-settings: normal){
-    @font-face {
-        font-family: 'Manrope';
-        src: url('../fonts/Manrope-VariableFont_wght.ttf') format('truetype supports variations'),
-            url('../fonts/Manrope-VariableFont_wght.ttf') format('truetype-variations');
-        font-weight: 600 800;
-    }
-}
-
-:root{
-    --soft-cyan-full-slider-bar: hsl(174, 77%, 80%);
-    --strong-cyan-slider-background: hsl(174, 86%, 45%);
-    --light-grayish-red-discount-background: hsl(14, 92%, 95%);
-    --light-red-discount-text: hsl(15, 100%, 70%);
-    --pale-blue-cta-text: hsl(226, 100%, 87%);
-    --bacground-color: hsl(230, 100%, 99%);
-    --empty-slider-bar: hsl(224, 65%, 95%);
-    --toggle-background: hsl(223, 50%, 87%);
-    --text: hsl(225, 20%, 60%);
-    --headings-text: hsl(227, 35%, 25%);
-    --font: 'Manrope', sans-serif;
-}
-
-
-html{
-    font-size: 62.5%;
-}
-
 body{
     display: flex;
     justify-content: center;
